examples/pass/affine/pattern_consume.dew
// expect: 42
// Pattern match that destructures an affine struct, consuming its fields.
#[affine]
struct Pair { first: Int, second: Int }
def main = fn {
  def p = Pair { first: 40, second: 2 };
  p.first + p.second -> stdout;
};
